metadata/force-app/main/default/objects/Indexation_Rate__c/Indexation_Rate__c.object-meta.xml
<CustomObject>
    <label>Indexation Rate</label>
    <nameField>
        <label>Indexation Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indexation Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>