metadata/force-app/main/default/objects/Indexation_Rate__c/fields/Indexation_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Indexation_First_Date__c</fullName>
    <description>The first date of the month for which this indexation rate applies to.</description>
    <formula>DATE(VALUE(LEFT(Year_and_Month__c,4)),VALUE(Right(Year_and_Month__c,2)),01)</formula>
    <inlineHelpText>The first date of the month for which this indexation rate applies to.</inlineHelpText>
    <label>Indexation First Date</label>
    <type>Date</type>
</CustomField>