metadata/force-app/main/default/objects/Indexation_Rate__c/fields/Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Rate__c</fullName>
    <label>Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>