metadata/force-app/main/default/objects/Indexation_Rate__c/fields/Indexation_Region_and_Date__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Region_and_Date__c</fullName>
    <formula>Subsidiary__c &amp;&quot; &quot;&amp;Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indexation Region and Date</label>
    <type>Text</type>
</CustomField>