metadata/force-app/main/default/objects/Indexation_Rate__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <referenceTo>Subsidiaries__c</referenceTo>
    <relationshipLabel>Indexation Rates</relationshipLabel>
    <relationshipName>Indexation_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>