metadata/force-app/main/default/objects/Indexation_Rate__c/fields/Year_and_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_and_Month__c</fullName>
    <label>Year and Month</label>
    <length>7</length>
    <type>Text</type>
</CustomField>